fix alignment on bigger screens

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -143,9 +143,10 @@ a {
 
 .horizontal-container {
   display: flex;
-  max-width: 95vw;
+  max-width: 1400px;
   margin: 0 auto;
   align-items: center;
+  justify-content: center;
   gap: 1.2rem;
   padding: 16px;
 
@@ -169,15 +170,11 @@ a {
   min-width: 0;
   max-width: 700px;
   margin-top: clamp(0.5rem, 5vh, 5%);
-  margin-left: clamp(1rem, 10vw, 10%);
-  margin-right: 5vw;
+  margin-left: 2rem;
+  margin-right: 2rem;
 
   p {
     margin-top: 0.2rem;
-  }
-
-  @media (max-width: 900px) {
-    margin-right: 2rem;
   }
 
   @media (max-width: 768px) {
@@ -223,7 +220,7 @@ a {
 
 .hero-image {
   flex-shrink: 0;
-  margin-left: 0;
+  margin-left: 2rem;
   margin-right: 2rem;
   margin-top: clamp(1rem, 10vh, 5%);
   object-fit: cover;
